Sun Nov 23 12:05:32 1997  James Youngman  <jay@gnu.org>

	* getopt.cc: small changes to eliminate unruseful dependence on
 	quit.h.

	* what.cc: no longer needs quit.h (and in fact what no longer
	needs quit.o).

	* tests/year-2000: added test scripts for Year-2000 compliance.
	They also cover the whole life of SCCS (1969 -- 2038).

	* sccsdate.cc: We now handle dates without using time_t, so that
	everything works with dates right up to 2068.  sccs_date::now()
	still fails when time_t runs out (Tue Jan 19 03:14:07 2038 on my
	system).

	* mktime.c: removed this obsolete file.

	* configure.in: no longer need mktime() or "timezone".

	* sccsname.cc: Fixed bug with 1-character filenames.

	* mystring.h: Use the standard string class from <string>, if it
	is available.

Thu Nov 20 21:03:24 1997  James Youngman  <jay@gnu.org>

	* sccsdate.cc: Added changes mandated by X/Open for year
	2000 compliance, and fixed year-2019 bug. 

	* docs/cssc.texi: Added chapter covering Year 2000 issues to the
 	manual.

Wed Nov 12 00:13:01 1997  James Youngman  <jay@gnu.org>

	* docs/cssc.texi: added TODO comments for text that still needs to
	be written. 

	* docs/TODO: added list of undocumented/unimplemented/untested
	stuff. 

Tue Nov 11 22:11:47 1997  James Youngman  <jay@gnu.org>

	* strerror.c, strstr.c: #include <config.h> not "cssc.h" since the
 	latter contains C++ class definitions and this is a C module.

	* fsync.h, list.h: Don't use double leading underscores in macro
 	names since this conflicts with the implementation's namespace.

	* file.h: Don't munge the names of rename() and remove() since
 	these now no longer have their definitions #included.

	* Makefile.am: Fixed rule for sccsdiff, which did not work on BSD
 	make (since it didn't grok "$<", apparently).

Sun Nov  9 21:06:59 1997  James Youngman  <jay@gnu.org>

	* NEWS: Changes for CSSC-devel-0.03-pl0.

	* Makefile.am:
	Added in some extra garbage to the distribution so that 99.9% of the