@@ -25,13 +25,13 @@
  */
 
 #include "cssc.h"
-#include "getopt.h"
+#include "my-getopt.h"
 #include "fileiter.h"
 #include "sccsfile.h"
 #include "sf-chkmr.h"
 #include "version.h"
 
-const char main_rcs_id[] = "CSSC $Id: cdc.cc,v 1.7 1997/11/18 23:22:13 james Exp $";
+const char main_rcs_id[] = "CSSC $Id: cdc.cc,v 1.8 1997/11/30 14:35:06 james Exp $";
 
 void
 usage() {
