@@ -28,10 +28,10 @@
 #include "cssc.h"
 #include "fileiter.h"
 #include "sccsfile.h"
-#include "getopt.h"
+#include "my-getopt.h"
 #include "version.h"
 
-const char main_rcs_id[] = "CSSC $Id: prs.cc,v 1.8 1997/11/18 23:22:28 james Exp $";
+const char main_rcs_id[] = "CSSC $Id: prs.cc,v 1.9 1997/11/30 14:35:10 james Exp $";
 
 void
 usage() {
